# documentation/templates/swagger.json
@@ -8,7 +8,7 @@
     },
     "license": {
       "name": "GNU General Public License v3.0",
-      "url": "https://github.com/wujianguo/apphub/blob/main/LICENSE"
+      "url": "https://github.com/myapphub/apphub/blob/main/LICENSE"
     },
     "version": "1.0.0"
   },
@@ -35,6 +35,26 @@
     }
   ],
   "paths": {
+    "/user/auth/config": {
+      "get": {
+        "tags": [
+          "user"
+        ],
+        "summary": "Get user auth config",
+        "responses": {
+          "201": {
+            "description": "user auth configuration",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserAuthConfigResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/user/register": {
       "post": {
         "tags": [
@@ -1822,7 +1842,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/ApplicationnUserUpdateRequest"
+                "$ref": "#/components/schemas/ApplicationUserUpdateRequest"
               }
             }
           }
@@ -2758,7 +2778,7 @@
             "bearerAuth": []
           }
         ],
-        "summary": "Adds an application to the user",
+        "summary": "Adds an application to the organization",
         "parameters": [
           {
             "name": "org_path",
@@ -3304,7 +3324,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/ApplicationnUserUpdateRequest"
+                "$ref": "#/components/schemas/ApplicationUserUpdateRequest"
               }
             }
           }
@@ -4140,6 +4160,257 @@
           },
           "404": {
             "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/download/{slug}": {
+      "get": {
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "tags": [
+          "distribute"
+        ],
+        "summary": "Get the app detail by slug",
+        "parameters": [
+          {
+            "name": "slug",
+            "in": "path",
+            "description": "The app's slug",
+            "required": true,
+            "style": "simple",
+            "explode": false,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "item detail.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ApplicationResponse"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/download/{slug}/packages": {
+      "get": {
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "tags": [
+          "distribute"
+        ],
+        "summary": "List the packages",
+        "parameters": [
+          {
+            "name": "slug",
+            "in": "path",
+            "description": "The app's slug",
+            "required": true,
+            "style": "simple",
+            "explode": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "os",
+            "in": "query",
+            "description": "os",
+            "required": false,
+            "style": "simple",
+            "explode": true,
+            "schema": {
+              "type": "string",
+              "enum": [
+                "Android",
+                "iOS",
+                "macOS",
+                "tvOS",
+                "Windows",
+                "Linux"
+              ]
+            }
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "description": "Page number (default 1).",
+            "required": false,
+            "style": "form",
+            "explode": true,
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "per_page",
+            "in": "query",
+            "description": "Number of items to list per page (default 10, max 100).",
+            "required": false,
+            "style": "form",
+            "explode": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "application package list",
+            "headers": {
+              "X-Total-Count": {
+                "description": "The total number of items.",
+                "style": "simple",
+                "explode": false,
+                "schema": {
+                  "type": "integer"
+                }
+              }
+            },
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/PackageResponse"
+                  }
+                }
+              }
+            }
+          },
+          "304": {
+            "description": "Not Modified."
+          }
+        }
+      }
+    },
+    "/download/{slug}/packages/latest": {
+      "get": {
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "tags": [
+          "distribute"
+        ],
+        "summary": "Get the latest package",
+        "parameters": [
+          {
+            "name": "slug",
+            "in": "path",
+            "description": "The app's slug",
+            "required": true,
+            "style": "simple",
+            "explode": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "os",
+            "in": "query",
+            "description": "os",
+            "required": false,
+            "style": "simple",
+            "explode": true,
+            "schema": {
+              "type": "string",
+              "enum": [
+                "Android",
+                "iOS",
+                "macOS",
+                "tvOS",
+                "Windows",
+                "Linux"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "the package",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PackageResponse"
+                }
+              }
+            }
+          },
+          "304": {
+            "description": "Not Modified."
+          }
+        }
+      }
+    },
+    "/download/{slug}/packages/{package_id}": {
+      "get": {
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "tags": [
+          "distribute"
+        ],
+        "summary": "Get the package by package_id",
+        "parameters": [
+          {
+            "name": "slug",
+            "in": "path",
+            "description": "The app's slug",
+            "required": true,
+            "style": "simple",
+            "explode": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "package_id",
+            "in": "path",
+            "description": "The package's package_id",
+            "required": true,
+            "style": "simple",
+            "explode": false,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "tye package",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PackageResponse"
+                }
+              }
+            }
+          },
+          "304": {
+            "description": "Not Modified."
           }
         }
       }
@@ -5803,6 +6074,124 @@
           }
         }
       }
+    },
+    "/aliyun/oss/callback/{uploader_type}/{uploader}/{slug}": {
+      "post": {
+        "tags": [
+          "distribute"
+        ],
+        "summary": "Aliyun oss callback",
+        "parameters": [
+          {
+            "name": "uploader_type",
+            "in": "path",
+            "description": "The uploader's type (user, token)",
+            "required": true,
+            "style": "simple",
+            "explode": false,
+            "schema": {
+              "type": "string",
+              "enum": ["user", "token"]
+            }
+          },
+          {
+            "name": "uploader",
+            "in": "path",
+            "description": "The app's install slug",
+            "required": true,
+            "style": "simple",
+            "explode": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "slug",
+            "in": "path",
+            "description": "The app's install slug",
+            "required": true,
+            "style": "simple",
+            "explode": false,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AliyunOSSCallback"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "the callback response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PackageResponse"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/aliyun/oss/request_upload/{slug}": {
+      "post": {
+        "tags": [
+          "distribute"
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "summary": "Aliyun oss request upload",
+        "parameters": [
+          {
+            "name": "slug",
+            "in": "path",
+            "description": "The app's install slug",
+            "required": true,
+            "style": "simple",
+            "explode": false,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/RequestUploadPackage"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "the aliyun oss upload data response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AliyunUploadToken"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -5834,6 +6223,42 @@
             "items": {
               "$ref": "#/components/schemas/Error_errors"
             }
+          }
+        }
+      },
+      "UserAuthConfigResponse": {
+        "type": "object",
+        "properties": {
+          "type": {
+            "type": "string",
+            "enum": [
+              "email",
+              "ldap",
+              "slack",
+              "microsoft_teams",
+              "dingtalk",
+              "github",
+              "gitlab",
+              "work_weixin",
+              "feishu"
+            ]
+          },
+          "email_domain": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          },
+          "logo": {
+            "type": "string",
+            "format": "url"
+          },
+          "auth_url": {
+            "type": "string",
+            "format": "url"
           }
         }
       },
@@ -6344,6 +6769,75 @@
           },
           "commit_id": {
             "type": "string"
+          }
+        }
+      },
+      "RequestUploadPackage": {
+        "type": "object",
+        "properties": {
+          "file_name": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          },
+          "commit_id": {
+            "type": "string"
+          }
+        }
+      },
+      "AliyunOSSCallback": {
+        "type": "object",
+        "properties": {
+          "object": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          },
+          "commit_id": {
+            "type": "string"
+          }
+        }
+      },
+      "AliyunUploadToken": {
+        "type": "object",
+        "properties": {
+          "access_key_id": {
+            "type": "string"
+          },
+          "access_key_secret": {
+            "type": "string"
+          },
+          "security_token": {
+            "type": "string"
+          },
+          "endpoint": {
+            "type": "string"
+          },
+          "bucket": {
+            "type": "string"
+          },
+          "key_prefix": {
+            "type": "string"
+          },
+          "is_cname": {
+            "type": "boolean"
+          },
+          "callback": {
+            "type": "object",
+            "properties": {
+              "callback_url": {
+                "type": "string",
+                "format": "url"
+              },
+              "callback_body": {
+                "type": "string"
+              },
+              "callback_body_type": {
+                "type": "string"
+              }
+            }
           }
         }
       },
